# Medimage

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
1/: README.md
1/include/: image.h
1/source/: image.cpp  noise_filtering.cpp
2/source/: main.cpp
3/source/: cloudinary_upload.cpp
4/: export_to_onnx.py
backend/: .env.example  CMakeLists.txt  Dockerfile
backend/1/source/: main.cpp
backend/3/: README.md
backend/3/source/: quantification.cpp  storage.cpp
backend/4/: test_onnx_inference.py
backend/include/: stb_image_write.h
backend/include/middleware/: headers.h
backend/source/:  server.cpp  image_analyser.cpp  image_processor.cpp  main.cpp  noise_filtering.cpp  results.cpp  security.cpp
frontend/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/(application)/: layout.tsx
frontend/app/(application)/dashboard/: page.tsx
frontend/app/(application)/results/: page.tsx
frontend/app/(application)/upload/: page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/sign-up/: page.tsx
frontend/app/components/: AccuracyChart.tsx  ButtonSpinner.tsx  Logo.tsx  PageSpinner.tsx  SideBar.tsx  TopBar.tsx  WordByWordText.tsx
frontend/app/icons/: AccuracyRate.tsx  DashboardIcon.tsx  DownArrow.tsx  HidePasswordIcon.tsx  Logo.tsx  LogoutIcon.tsx  Results.tsx  SelectedFiltericon.tsx  SuccessfulUploadsIcon.tsx  UnselectedFilterIcon.tsx  UploadFileIcon.tsx  UploadIcon.tsx  UploadsIcon.tsx  XIcon.tsx
frontend/app/store/: userStore.ts
frontend/app/utils/: firebase.ts  helpers.ts
frontend/components/ui/: button.tsx  progress.tsx
frontend/lib/: strings.ts  types.ts  validation.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: upload.tsx
frontend/src/pages/: home.tsx  index.tsx  page_not_found.tsx
